--- a/applications/source/mongodb-source/README.adoc
+++ b/applications/source/mongodb-source/README.adoc
@@ -17,6 +17,7 @@ $$mongodb.supplier.collection$$:: $$The MongoDB collection to query.$$ *($$Strin
 $$mongodb.supplier.query$$:: $$The MongoDB query.$$ *($$String$$, default: `$${ }$$`)*
 $$mongodb.supplier.query-expression$$:: $$The SpEL expression in MongoDB query DSL style.$$ *($$Expression$$, default: `$$<none>$$`)*
 $$mongodb.supplier.split$$:: $$Whether to split the query result as individual messages.$$ *($$Boolean$$, default: `$$true$$`)*
+$$mongodb.supplier.update-expression$$:: $$The SpEL expression in MongoDB update DSL style.$$ *($$Expression$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 Also see the https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html[Spring Boot Documentation] for additional `MongoProperties` properties.
