--- a/README.adoc
+++ b/README.adoc
@@ -174,6 +174,9 @@ To perform this necessary step, run `setup-build.sh`.
 
 `./mvnw clean install`
 
+TIP: By default the build skips long running tests, annotated with `@Tag("integration")`,including tests requiring Testcontainers. To run the full test suite, activate the `integration` Maven profile:
+`./mvnw clean install -Pintegration`. This applies to building functions or individual applications as well.
+
 However, this may not be what you are interested in since you are probably interested in a single application or a few of them.
 
 To build the functions and applications that you are interested in, you need to build them selectively, as shown below.
